--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   },
   "author": "Anna Trzeciak",
   "devDependencies": {
+    "body-parser": "^1.19.0",
     "eslint": "^5",
-    "eslint-plugin-prettier": "^3.1.1",
-    "mongoose": "^5.5.8",
-    "nodemon": "^1.19.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.16.4",
-    "body-parser": "^1.19.0"
+    "mongoose": "^5.5.8",
+    "nodemon": "^1.19.0"
+  },
+  "dependencies": {
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-security": "^1.4.0"
   }
 }
