--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "super node app ",
   "main": "server.js",
   "scripts": {
-    "start:server": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.16.4",
     "mongoose": "^5.5.8",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.4"
   },
   "dependencies": {
     "eslint-plugin-node": "^11.0.0",
