--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ node_modules/
 # local env files
 .env.local
 .env.*.local
+.env
 
 # Log files
 npm-debug.log*
@@ -14,6 +15,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # Editor directories and files
+.env
 .idea
 .vscode
 *.suo
