Stopped tracking env

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "super node app ",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start:server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -20,9 +20,9 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-security": "^1.4.0",
-    "superagent": "^5.2.1"
+    "superagent": "^5.2.1",
+    "dotenv": "^8.2.0"
   }
 }
