--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
-    "@vue/cli": "^4.2.3",
     "@babel/polyfill": "^7.4.4",
+    "@vue/cli": "^4.2.3",
     "babel-preset-env": "^1.7.0",
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
@@ -42,6 +42,7 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-security": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.6",
     "superagent": "^5.2.1"
   }
 }
