Added debug info to api

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-env": "^1.7.0",
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
+    "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.0.0",
