--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@stripe/stripe-js": "^1.7.0",
     "@vue/cli": "^4.2.3",
     "babel-preset-env": "^1.7.0",
     "bcrypt": "^4.0.1",
@@ -44,6 +45,7 @@
     "eslint-plugin-security": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.6",
+    "stripe": "^8.66.0",
     "superagent": "^5.2.1"
   }
 }
