--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,3 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "useBuiltIns": "usage",
-        "corejs": 2
-      }
-    ],
-  ],
-  "plugins": [
-    "@babel/plugin-proposal-class-properties","@babel/plugin-proposal-export-default-from"
-  ]
+  "presets": ["@babel/preset-env"]
 }
