--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "gl-calc-api",
   "version": "1.0.0",
-  "description": "super node app ",
+  "description": "API to gl-calc app ",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon --exec babel-node server.js",
-    "build": "babel src --out-dir dist",
+    "start": "babel-node server.js",
+    "dev": "nodemon --exec babel-node server.js",
     "serve": "node dist/app.js"
+  },
+  "engines": {
+    "node": "12.x"
   },
   "repository": {
     "type": "git",
@@ -14,9 +17,9 @@
   },
   "author": "Anna Trzeciak",
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/node": "^7.5.5",
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.4",
+    "@babel/node": "^7.10.4",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-transform-async-to-generator": "^7.5.0",
@@ -35,6 +38,9 @@
     "@babel/polyfill": "^7.4.4",
     "@stripe/stripe-js": "^1.7.0",
     "@vue/cli": "^4.2.3",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
